--- a/NewSturdyRefDialog.razor
+++ b/NewSturdyRefDialog.razor
@@ -24,9 +24,9 @@
     public ulong InterfaceId { get; set; }
 
     [Parameter]
-    public StoredSRData? EditData { get; set; }
+    public StoredSrData? EditData { get; set; }
 
-    private StoredSRData _editBookmark = new();
+    private StoredSrData _editBookmark = new();
 
     protected override void OnParametersSet()
     {
