--- a/KA5SoilTypeTriangleDialog.razor
+++ b/KA5SoilTypeTriangleDialog.razor
@@ -13,7 +13,7 @@
 
 @code {
     [CascadingParameter] 
-    MudDialogInstance? MudDialog { get; set; }
+    IMudDialogInstance? MudDialog { get; set; }
 
     private KA5SoilTypeTriangle? triangle { get; set; }
 
