--- a/GeoRegionPicker.razor
+++ b/GeoRegionPicker.razor
@@ -88,11 +88,7 @@
             var mapOptions = new MapOptions()
             {
                 Zoom = 13,
-                Center = new LatLngLiteral()
-                {
-                    Lat = 13.505892,
-                    Lng = 100.8162
-                },
+                Center = new LatLngLiteral(13.505892, 100.8162),
                 MapTypeId = MapTypeId.Roadmap,
                 //ApiLoadOptions = await KeyService.GetApiOptions()
             };
